fix for slider double image on tablet

--- a/src/blocks/slider2/style.scss
+++ b/src/blocks/slider2/style.scss
@@ -82,41 +82,39 @@
 				background-repeat: no-repeat;
 				background-position: 50% 60%;
 			}
-			// hide slider on mobile
-			@media (max-width: 600px) {
+
+			@include mobiles-all {
 				.swiper-slide {
-					background-size: cover;
-					// height: 300px;
-					// background-position: 50% 60%;
-					// background-size: 100% 300px;
-					// background-position-x: 0px;
-					// background-position-y: 0px;
-					// background-repeat: no-repeat;
-					// margin-bottom: 400px;
-					.slide-title {
-						justify-content: center !important;
-						margin-top: 40px;
-						margin-left: 0px;
-						width: 100%;
-						line-height: 32px;
-						text-align: center;
-					}
-					.slide-content {
-						justify-content: center !important;
-						margin-top: 20px;
-						margin-left: 0px;
-						width: 100%;
-						line-height: 32px;
-						text-align: center;
-					}
-					.slide-btn-container {
-						width: 100%;
-						justify-content: center !important;
-						.slide-btn {
-							padding: 0 20px;
-						}
-						.fl-button {
-							@include fl-button-mixin;
+					.slider-container {
+						.slide-content-container {
+							background-size: cover;
+							.slide-title {
+								justify-content: center !important;
+								margin-top: 40px;
+								margin-left: 0px;
+								width: 100%;
+								line-height: 32px;
+								text-align: center;
+							}
+							.slide-content {
+								justify-content: center !important;
+								margin-top: 20px;
+								margin-left: 0px;
+								padding: 0px 20px;
+								width: unset;
+								line-height: 32px;
+								text-align: center;
+							}
+							.slide-btn-container {
+								width: 100%;
+								justify-content: center !important;
+								.slide-btn {
+									padding: 0 20px;
+								}
+								.fl-button {
+									@include fl-button-mixin;
+								}
+							}
 						}
 					}
 				}
@@ -144,6 +142,12 @@
 							}
 						}
 					}
+				}
+			}
+
+			@include tablets-portrait {
+				.mobile-slider {
+					display: none; // hide mobile slider in tablet
 				}
 			}
 		}
