--- a/src/common.scss
+++ b/src/common.scss
@@ -79,3 +79,91 @@
 	text-decoration: none;
 	text-shadow: 0px 1px 0px #2f6627;
 }
+
+/**  media queries  **/
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@mixin desktops-large {
+	@media (min-width: 1281px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Laptops, Desktops
+	##Screen = 1025px to higher resolution desktops and laptops
+  */
+
+@mixin desktops-all {
+	@media (min-width: 1025px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Laptops, Desktops
+	##Screen = B/w 1025px to 1280px
+  */
+
+@mixin desktops {
+	@media (min-width: 1025px) and (max-width: 1280px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Tablets, Ipads (portrait)
+	##Screen = B/w 768px to 1024px
+  */
+
+@mixin tablets-portrait {
+	@media (min-width: 768px) and (max-width: 1024px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Tablets, Ipads (landscape)
+	##Screen = B/w 768px to 1024px
+  */
+
+@mixin tablets-landscape {
+	@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Low Resolution Tablets, Mobiles (Landscape)
+	##Screen = B/w 481px to 767px
+  */
+
+@mixin mobiles-landscape {
+	@media (min-width: 481px) and (max-width: 767px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Most of the Smartphones Mobiles (Portrait)
+	##Screen = B/w 320px to 479px
+  */
+@mixin mobiles-portrait {
+	@media (min-width: 320px) and (max-width: 480px) {
+		@content;
+	}
+}
+
+/* 
+	##Device = Most of the Smartphones Mobiles
+	##Screen = B/w 320px to 767px
+  */
+@mixin mobiles-all {
+	@media (min-width: 320px) and (max-width: 767px) {
+		@content;
+	}
+}
